removed guava